--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.0.0 
+  http: ^0.13.0 
   animated_splash_screen: ^1.3.0 
+  email_auth: ^1.0.0
+  otp_text_field: ^1.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -82,15 +84,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato/Lato-Regular.ttf
+        # - asset: assets/fonts/Lato/Lato-Light.ttf
+        # - asset: assets/fonts/Lato/Lato-Regular.ttf
+        # - asset: assets/fonts/Lato/Lato-Thin.ttf
+        # - asset: assets/fonts/Lato/Lato-Bold.ttf
+          # style: italic
+    - family: Montserrat
+      fonts:
+        - asset: assets\fonts\Montserrat\static\Montserrat-Regular.ttf
+        - asset: assets\fonts\Montserrat\static\Montserrat-Bold.ttf
+          weight: 700
+        - asset: assets\fonts\Montserrat\Montserrat-VariableFont_wght.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
