--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/app_icon/
+    - assets/app_icon/digicsr_app_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
