--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   animated_splash_screen: ^1.3.0 
   email_auth: ^1.0.0
   otp_text_field: ^1.1.3
+  flutter_secure_storage: ^8.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  velocity_x: ^4.1.0
 
 dev_dependencies:
   flutter_test:
