--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   email_auth: ^1.0.0
   otp_text_field: ^1.1.3
   flutter_secure_storage: ^8.0.0
+  csc_picker: ^0.2.7
+  multi_select_flutter: ^4.1.3
+  file_picker: ^5.3.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -98,6 +102,8 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets\fonts\Montserrat\static\Montserrat-Regular.ttf
+        - asset: assets\fonts\Montserrat\static\Montserrat-Italic.ttf
+          style: italic
         - asset: assets\fonts\Montserrat\static\Montserrat-Bold.ttf
           weight: 700
         - asset: assets\fonts\Montserrat\Montserrat-VariableFont_wght.ttf
