--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   velocity_x: ^4.1.0
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
