--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   email_auth: ^1.0.0
   otp_text_field: ^1.1.3
   flutter_secure_storage: ^8.0.0
+  path_provider: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
