benificiary and comp details

--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   velocity_x: ^4.1.0
   readmore: ^2.2.0
+  font_awesome_flutter: ^10.4.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
