--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: ^5.3.2
   dio: ^5.2.0
   path_provider: ^2.0.15
+  jwt_decoder: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
