--- a/DigiCSR_backend/package.json
+++ b/DigiCSR_backend/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -19,11 +18,11 @@
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
-    "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^1.14.9"
   }
 }
