--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   dio: ^5.2.0
   path_provider: ^2.0.15
   jwt_decoder: ^2.0.1
+  flutter_rating_bar: ^4.0.1
+
+  
+
 
 
   # The following adds the Cupertino Icons font to your application.
