--- a/DigiCSR_the_app/pubspec.yaml
+++ b/DigiCSR_the_app/pubspec.yaml
@@ -43,8 +43,12 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_rating_bar: ^4.0.1
   flutter_slidable: ^3.0.0
+  flutter_html: ^2.2.1
+  fl_chart: ^0.63.0
   
 
+dependency_overrides:
+  flutter_svg: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,7 +57,6 @@ dependencies:
   velocity_x: ^4.1.0
   readmore: ^2.2.0
   font_awesome_flutter: ^10.4.0
-  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
