--- a/DigiCSR_the_app/android/app/src/main/AndroidManifest.xml
+++ b/DigiCSR_the_app/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.digicsr">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="digicsr"
+        android:label="Digicsr"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         android:enableOnBackInvokedCallback="true">
